--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,17 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins-service
-  namespace: devops-tools
-  annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/path:   /
-      prometheus.io/port:   '8080'
+  name: node-app-service
+  namespace: node-app
 spec:
-  selector:
-    app: jenkins-server
   type: NodePort
+  selector:
+    app: node-app-deployment
   ports:
-    - port: 8080
-      targetPort: 8080
-      nodePort: 32000
+    - port: 3000
+      targetPort: 3000
+      nodePort: 31000
